tests/lexer/invalid/test_empty_comment.src
// Тест 8: Пустые комментарии
/**/
/* */
///
/*/*/